--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@
 	width: 100%;
 	max-height: 300px;
 	overflow: scroll;
+	-webkit-user-select: initial;
+	-moz-user-select: initial;
+	-ms-user-select: initial;
+	user-select: initial;
 }
 
 .console-row.err {
