--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,23 @@
+html, body {
+	margin: 0;
+	padding: 0;
+}
+
 @import "~@blueprintjs/core/dist/blueprint.css";
+@import "~@blueprintjs/core/dist/variables.scss";
 @import "~flexboxgrid/dist/flexboxgrid.css";
 @import "~react-vis/dist/styles/plot.scss";
 
 #root {
+	background-color: $pt-app-background-color;
+	min-height: 100vh;
+}
+
+#root.pt-dark {
+	background-color: $pt-dark-app-background-color;
+}
+
+.App {
 	max-width: 960px;
 	margin-left: auto;
 	margin-right: auto;
@@ -15,7 +30,7 @@
 }
 
 .console-row.err {
-	color: #FF4136;
+	color: $pt-intent-danger;
 }
 
 .diag-wrap {
@@ -105,4 +120,8 @@ table.rawdata {
 
 .game-control-box {
 	padding-bottom: 1em;
+}
+
+.navbar-spacer {
+	height: $pt-navbar-height + $pt-grid-size * 2;
 }
