--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ html, body {
 #root {
 	background-color: $pt-app-background-color;
 	min-height: 100vh;
+	padding-bottom: 2em; // this is to fix the issue with a little white space at the bottom caused by the padding from the console
 }
 
 #root.pt-dark {
